--- a/index.html
+++ b/index.html
@@ -59,23 +59,6 @@
               <ul class="site-nav-ul js-clone-nav text-left d-none d-lg-inline-block">
                 <li class="has-children">
                   <a href="#home-section" class="nav-link">Home</a>
-                  <ul class="dropdown">
-                    <li>
-                      <a href="index.html">Hero Image BG</a>
-                    </li>
-                    <li>
-                      <a href="index-video.html">Video BG</a>
-                    </li>
-                    <li>
-                      <a href="index-hero-slider.html">Hero Slider</a>
-                    </li>
-                    <li>
-                      <a href="index-sidebar-menu.html">Sidebar Menu</a>
-                    </li>
-                    <li>
-                      <a href="index-right-menu.html">Right Menu</a>
-                    </li>
-                  </ul>
                 </li>
                 <li><a href="#portfolio-section" class="nav-link">Portfolio</a></li>
                 <li><a href="#about-section" class="nav-link">About</a></li>
@@ -89,7 +72,6 @@
               <ul class="site-nav-ul js-clone-nav text-left d-none d-lg-inline-block">
                 <li><a href="#skills-section" class="nav-link">Skills</a></li>
                 <li><a href="#testimonial-section" class="nav-link">Testimonial</a></li>
-                <li><a href="#journal-section" class="nav-link">Journal</a></li>
                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
               </ul>
 
@@ -110,7 +92,7 @@
 
             <div class="col-md-7 mx-auto text-center">
               <h1 class="heading gsap-reveal-hero">SoloCoder</h1>
-              <h2 class="subheading gsap-reveal-hero">I'm Ifeanyi Onyekwelu A Full-Stack developer Based In Abuja
+              <h2 class="subheading gsap-reveal-hero">I'm Ifeanyi Onyekwelu A Full-Stack developer Based In Enugu
               </h2>
             </div>
 
@@ -167,125 +149,68 @@
                   <div class="overlay">
                     <span class="wrap-icon icon-link2"></span>
                     <div class="portfolio-item-content">
-                      <h3>Shoe Rebranding</h3>
-                      <p>web, branding</p>
+                      <h3>Courier Service</h3>
+                      <p>web, ui/ux</p>
                     </div>
                   </div>
-                  <img src="images/work_1_md.jpg" class="lazyload  img-fluid" alt="Images" />
+                  <img src="images/project/courier/courier-home.png" class="lazyload  img-fluid" alt="Images" />
                 </a>
               </div>
               <div class="item branding packaging illustration col-sm-6 col-md-6 col-lg-4 isotope-mb-2 ">
-                <a href="portfolio-single-3.html"
+                <a href="portfolio-single-2.html"
                   class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="3">
                   <div class="overlay">
                     <span class="wrap-icon icon-link2"></span>
                     <div class="portfolio-item-content">
-                      <h3>Reworking</h3>
-                      <p>branding, packaging, illustration</p>
+                      <h3>Findstate Housing Agency</h3>
+                      <p>Web, ui/ux</p>
                     </div>
                   </div>
-                  <img src="images/work_2_md.jpg" class="lazyload  img-fluid" alt="Images" />
+                  <img src="images/project/findstate/home-full.png" class="lazyload  img-fluid" alt="Images" />
                 </a>
               </div>
 
               <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="portfolio-single-4.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page"
+                <a href="portfolio-single-3.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page"
                   data-id="4">
                   <div class="overlay">
                     <span class="wrap-icon icon-link2"></span>
                     <div class="portfolio-item-content">
-                      <h3>Modern Building</h3>
-                      <p>branding, packaging</p>
+                      <h3>Banking website</h3>
+                      <p>web, fintech, ui/ux</p>
                     </div>
                   </div>
-                  <img src="images/work_3_md.jpg" class="lazyload  img-fluid" alt="Images" />
+                  <img src="images/project/bank app/home.png" class="lazyload  img-fluid" alt="Images" />
                 </a>
               </div>
 
               <div class="item web packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-
-                <a href="images/work_4_full.jpg" class="portfolio-item isotope-item gsap-reveal-img"
-                  data-fancybox="gallery" data-caption="Watch">
+                <a href="portfolio-single-4.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page"
+                  data-id="4">
                   <div class="overlay">
                     <span class="wrap-icon icon-photo2"></span>
                     <div class="portfolio-item-content">
-                      <h3>Watch</h3>
-                      <p>web, packaging</p>
+                      <h3>Forex Coaching Agency</h3>
+                      <p>web, ui/ux</p>
                     </div>
                   </div>
-                  <img src="images/work_4_full.jpg" class="lazyload  img-fluid" alt="Images" />
+                  <img src="images/project/forex/home.png" class="lazyload  img-fluid" alt="Images" />
                 </a>
 
-              </div>
-
-              <div class="item illustration packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="images/work_5_md.jpg" class="portfolio-item isotope-item gsap-reveal-img"
-                  data-fancybox="gallery" data-caption="Shoe Rebranding">
-                  <div class="overlay">
-                    <span class="wrap-icon icon-photo2"></span>
-                    <div class="portfolio-item-content">
-                      <h3>Shoe Rebranding</h3>
-                      <p>illustration, packaging</p>
-                    </div>
-                  </div>
-                  <img src="images/work_5_md.jpg" class="lazyload  img-fluid" alt="Images" />
-                </a>
               </div>
 
               <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="portfolio-single-2.html"
-                  class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="2">
+                <a href="portfolio-single-5.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page"
+                  data-id="4">
                   <div class="overlay">
                     <span class="wrap-icon icon-link2"></span>
                     <div class="portfolio-item-content">
-                      <h3>Reshape</h3>
-                      <p>web, branding</p>
+                      <h3>GlamourGlam</h3>
+                      <p>web, ui/ux</p>
                     </div>
                   </div>
-                  <img src="images/work_6_md.jpg" class="lazyload  img-fluid" alt="Images" />
-                </a>
-              </div>
-
-              <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="images/work_7_a_md.jpg" class="portfolio-item item-portrait isotope-item gsap-reveal-img "
-                  data-fancybox="gallery" data-caption="Modern Building">
-                  <div class="overlay">
-                    <span class="wrap-icon icon-photo2"></span>
-                    <div class="portfolio-item-content">
-                      <h3>Modern Building</h3>
-                      <p>branding, packaging</p>
-                    </div>
-                  </div>
-                  <img src="images/work_7_a_md.jpg" class="lazyload  img-fluid" alt="Images" />
-                </a>
-              </div>
-
-              <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="https://www.youtube.com/watch?v=mwtbEGNABWU"
-                  class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery"
-                  data-caption="Showreel 2019">
-                  <div class="overlay">
-                    <span class="wrap-icon icon-play_circle_filled"></span>
-                    <div class="portfolio-item-content">
-                      <h3>Showreel 2019</h3>
-                      <p>web, branding</p>
-                    </div>
-                  </div>
-                  <img src="images/work_8_md.jpg" class="lazyload  img-fluid" alt="Images" />
-                </a>
-              </div>
-
-              <div class="item web illustration col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="images/work_9_a_md.jpg" class="portfolio-item isotope-item gsap-reveal-img"
-                  data-fancybox="gallery" data-caption="Render Packaging">
-                  <div class="overlay">
-                    <span class="wrap-icon icon-photo2"></span>
-                    <div class="portfolio-item-content">
-                      <h3>Render Packaging</h3>
-                      <p>web, illustration</p>
-                    </div>
-                  </div>
-                  <img src="images/work_9_a_md.jpg" class="lazyload  img-fluid" alt="Images" />
+                  <img src="images/project/glamout-glam/screenshot-127_0_0_1_8000-2024_08_15-13_26_57.png"
+                    class="lazyload  img-fluid" alt="Images" />
                 </a>
               </div>
             </div>
@@ -301,7 +226,6 @@
               <img src="images/divider.png" alt="divider" width="76">
             </span>
           </div>
-
 
           <div class="row mt-5 justify-content-between">
             <div class="col-lg-7 mb-5 mb-lg-0">
@@ -319,7 +243,8 @@
                 software development and cloud computing. Recently, I’ve worked on projects that improve system
                 performance and streamline deployment processes.
               </p>
-              <p class="gsap-reveal"><a href="#" class="btn btn-outline-pill btn-custom-light">Download my CV</a></p>
+              <p class="gsap-reveal"><a href="Full Stack Developer CV.pdf" class="btn btn-outline-pill btn-custom-light"
+                  download="MyResume.pdf">Download my CV</a></p>
             </div>
           </div>
         </div>
@@ -593,14 +518,15 @@
         <div class="row justify-content-center">
           <div class="col-md-7">
 
-            <div class="footer-site-logo"><a href="#">Unfold<span>.</span></a></div>
+            <div class="footer-site-logo"><a href="#">SoloCoder<span>.</span></a></div>
 
             <ul class="footer-site-social">
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">Dribbble</a></li>
-              <li><a href="#">Behance</a></li>
+              <li><a
+                  href="https://www.instagram.com/ifeanyi.onyekwelu.a?igsh=MXJ2NjFzbHpzcWt1eA%3D%3D&utm_source=qr">Instagram</a>
+              </li>
+              <li><a href="http://linkedin.com/in/ifeanyichukwu-onyekwelu">LinkedIn</a></li>
+              <li><a href="https://github.com/ifekel">Github</a></li>
+              <li><a href="https://x.com/TheReallIfeanyi">Twitter</a></li>
             </ul>
 
             <p class="site-copyright">
