--- a/portfolio-single-3.html
+++ b/portfolio-single-3.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-  <title>Unfold &mdash; A onepage portfolio HTML template by Colorlib</title>
+  <title>SoloCoder</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
+
   <meta name="description" content="">
   <meta name="keywords" content="html, css, javascript, jquery">
   <meta name="author" content="">
@@ -50,23 +50,6 @@
               <ul class="site-nav-ul js-clone-nav text-left d-none d-lg-inline-block">
                 <li class="has-children">
                   <a href="index.html#home-section" class="nav-link">Home</a>
-                  <ul class="dropdown">
-                    <li>
-                      <a href="index.html">Hero Image BG</a>
-                    </li>
-                    <li>
-                      <a href="index-video.html">Video BG</a>
-                    </li>
-                    <li>
-                      <a href="index-hero-slider.html">Hero Slider</a>
-                    </li>
-                    <li>
-                      <a href="index-sidebar-menu.html">Sidebar Menu</a>
-                    </li>
-                    <li>
-                      <a href="index-right-menu.html">Right Menu</a>
-                    </li>
-                  </ul>
                 </li>
                 <li><a href="index.html#portfolio-section" class="nav-link">Portfolio</a></li>
                 <li><a href="index.html#about-section" class="nav-link">About</a></li>
@@ -80,7 +63,6 @@
               <ul class="site-nav-ul js-clone-nav text-left d-none d-lg-inline-block">
                 <li><a href="index.html#skills-section" class="nav-link">Skills</a></li>
                 <li><a href="index.html#testimonial-section" class="nav-link">Testimonial</a></li>
-                <li><a href="index.html#journal-section" class="nav-link">Journal</a></li>
                 <li><a href="index.html#contact-section" class="nav-link">Contact</a></li>
               </ul>
 
@@ -100,8 +82,9 @@
           <div class="row align-items-center">
 
             <div class="col-md-10 mx-auto text-center">
-              <h1 class="heading" data-aos="fade-up">Reworking</h1>
-              <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Far far away, behind the word mountains, far from the countries.</h2>
+              <h1 class="heading" data-aos="fade-up">Findstate Housing Agency</h1>
+              <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Far far away, behind the word mountains,
+                far from the countries.</h2>
             </div>
 
           </div>
@@ -121,54 +104,104 @@
       <div class="container">
         <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
           <div class="portfolio-single-inner">
+            <h2 class="heading-portfolio-single-h2">Banking website</h2>
 
-            <h2 class="heading-portfolio-single-h2">Reworking</h2>
+            <div class="row gutter-v4 align-items-stretch mb-5">
+              <div class="col-sm-6 col-md-6 col-lg-8 blog-post-entry">
 
-            <div class="row justify-content-between align-items-stretch">
-
-              <div class="col-lg-8">
-                <p><a href="images/work_2_full.jpg" data-fancybox="gal"><img src="images/work_2_full.jpg" alt="Image" class="img-fluid"></a></p>
-                <p><a href="images/work_2_a_full.jpg" data-fancybox="gal"><img src="images/work_2_a_full.jpg" alt="Image" class="img-fluid"></a></p>
-                <p><a href="images/work_2_b_full.jpg" data-fancybox="gal"><img src="images/work_2_b_full.jpg" alt="Image" class="img-fluid"></a></p>
-              </div>
-              <div class="col-lg-4 pl-lg-5">
-                <div class="unslate_co--sticky">
-                  <div class="row">
-                    <div class="col-md-12 mb-4">
-                      <div class="detail-v1">
-                        <span class="detail-label">Project Description</span>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                      </div>
-                    </div>
-
-                    <div class="col-md-12 mb-4">
-                      <div class="detail-v1">
-                        <span class="detail-label">Project Date</span>
-                        <span class="detail-val">March 9th, 2020</span>
-                      </div>
-                    </div>
-                    <div class="col-md-12 mb-4">
-                      <div class="detail-v1">
-                        <span class="detail-label">Role</span>
-                        <span class="detail-val"><a href="#">Identity</a>, <a href="#">Web Design</a></span>
-                      </div>
-                    </div>
-                    <div class="col-md-12 mb-4">
-                      <div class="detail-v1">
-                        <span class="detail-label">Client</span>
-                        <span class="detail-val">unslate</span>
-                      </div>
-                    </div>
-                    <div class="col-md-12 mb-4">
-                      <div class="detail-v1">
-                        <span class="detail-label">Visit</span>
-                        <span class="detail-val"><a href="#">https:///</a></span>
-                      </div>
+                <a href="images/project/bank app/screenshot-localhost_5173-2024_08_15-11_46_01.png"
+                  class="grid-item blog-item w-100 h-100" data-fancybox="gal"
+                  data-caption="A nice caption will be place here">
+                  <div class="overlay">
+                    <div class="portfolio-item-content">
+                      <h3>A nice caption will be place here</h3>
                     </div>
                   </div>
-                </div> 
+                  <img src="images/project/bank app/screenshot-localhost_5173-2024_08_15-11_46_01.png" class="lazyload"
+                    alt="Image" />
+                </a>
+
+              </div>
+              <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
+                <a href="images/project/bank app/screenshot-localhost_5173-2024_08_15-11_46_11.png"
+                  class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                  <div class="overlay"></div>
+                  <img src="images/project/bank app/screenshot-localhost_5173-2024_08_15-11_46_11.png" class="lazyload"
+                    alt="Image" />
+                </a>
               </div>
 
+              <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
+
+                <a href="images/project/bank app/screenshot-localhost_5173-2024_08_15-11_55_22.png"
+                  class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                  <div class="overlay"></div>
+                  <img src="images/project/bank app/screenshot-localhost_5173-2024_08_15-11_55_22.png" class="lazyload"
+                    alt="Image" />
+                </a>
+
+              </div>
+              <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
+                <a href="images/project/bank app/screenshot-localhost_5173-2024_08_15-11_53_49.png"
+                  class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                  <div class="overlay"></div>
+                  <img src="images/project/bank app/screenshot-localhost_5173-2024_08_15-11_53_49.png" class="lazyload"
+                    alt="Image" />
+                </a>
+              </div>
+
+              <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
+                <a href="images/project/bank app/screenshot-localhost_5173-2024_08_15-11_54_26.png"
+                  class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                  <div class="overlay"></div>
+                  <img src="images/project/bank app/screenshot-localhost_5173-2024_08_15-11_54_26.png" class="lazyload"
+                    alt="Image" />
+                </a>
+              </div>
+
+            </div>
+
+            <div class="row justify-content-between mb-5">
+              <div class="col-12 mb-5">
+                <div class="row">
+                  <div class="col-sm-6 col-md-6 col-lg-3">
+                    <div class="detail-v1">
+                      <span class="detail-label">Project Date</span>
+                      <span class="detail-val">November, 2023</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-6 col-lg-3">
+                    <div class="detail-v1">
+                      <span class="detail-label">Role</span>
+                      <span class="detail-val"><a href="#">Identity</a>, <a href="#">Web Development</a></span>
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-6 col-lg-3">
+                    <div class="detail-v1">
+                      <span class="detail-label">Client</span>
+                      <span class="detail-val">Findstate</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-6 col-lg-3">
+                    <div class="detail-v1">
+                      <span class="detail-label">Visit</span>
+                      <span class="detail-val"><a href="#">https://</a></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 pr-md-5">
+                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
+                  the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
+                  language ocean. A small river named Duden flows by their place and supplies it with the necessary
+                  regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
+                </p>
+              </div>
+              <div class="col-md-6 pl-md-5">
+                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
+                  life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the
+                  far World of Grammar.</p>
+              </div>
             </div>
 
           </div>
@@ -181,27 +214,28 @@
         <div class="row justify-content-center">
           <div class="col-md-7">
 
-            <div class="footer-site-logo"><a href="#">Unfold<span>.</span></a></div>
+            <div class="footer-site-logo"><a href="#">SoloCoder<span>.</span></a></div>
 
             <ul class="footer-site-social">
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">Dribbble</a></li>
-              <li><a href="#">Behance</a></li>
+              <li><a
+                  href="https://www.instagram.com/ifeanyi.onyekwelu.a?igsh=MXJ2NjFzbHpzcWt1eA%3D%3D&utm_source=qr">Instagram</a>
+              </li>
+              <li><a href="http://linkedin.com/in/ifeanyichukwu-onyekwelu">LinkedIn</a></li>
+              <li><a href="https://github.com/ifekel">Github</a></li>
+              <li><a href="https://x.com/TheReallIfeanyi">Twitter</a></li>
             </ul>
 
             <p class="site-copyright">
-                
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                Copyright &copy;
-                <script>
-                  document.write(new Date().getFullYear());
-                </script> All rights reserved | This template is made with <i class="icon-heart"
-                  aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              
-              </p>
+
+              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              Copyright &copy;
+              <script>
+                document.write(new Date().getFullYear());
+              </script> All rights reserved | Built
+              by Ifeanyi Onyekwelu
+              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+
+            </p>
 
           </div>
         </div>
@@ -218,7 +252,6 @@
 
   <script src="js/scripts-dist.js"></script>
   <script src="js/main.js"></script>
-
 
 </body>
 
