--- a/portfolio-single-3.html
+++ b/portfolio-single-3.html
@@ -112,11 +112,6 @@
                 <a href="images/project/bank app/screenshot-localhost_5173-2024_08_15-11_46_01.png"
                   class="grid-item blog-item w-100 h-100" data-fancybox="gal"
                   data-caption="A nice caption will be place here">
-                  <div class="overlay">
-                    <div class="portfolio-item-content">
-                      <h3>A nice caption will be place here</h3>
-                    </div>
-                  </div>
                   <img src="images/project/bank app/screenshot-localhost_5173-2024_08_15-11_46_01.png" class="lazyload"
                     alt="Image" />
                 </a>
@@ -190,17 +185,11 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 pr-md-5">
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-                  the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
-                  language ocean. A small river named Duden flows by their place and supplies it with the necessary
-                  regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
+              <div class="col-lg-12 pr-md-5">
+                <p>A modern banking app built with JavaScript, Node.js (with TypeScript), React.js, and TailwindCSS for
+                  a secure and user-friendly financial experience. The app leverages MongoDB for efficient data
+                  management, offering seamless account operations, secure transactions, and an intuitive interface.
                 </p>
-              </div>
-              <div class="col-md-6 pl-md-5">
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic
-                  life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the
-                  far World of Grammar.</p>
               </div>
             </div>
 
