--- a/portfolio-single-5.html
+++ b/portfolio-single-5.html
@@ -113,11 +113,6 @@
                                 <a href="images/project/glamout-glam/screenshot-127_0_0_1_8000-2024_08_15-13_26_57.png"
                                     class="grid-item blog-item w-100 h-100" data-fancybox="gal"
                                     data-caption="A nice caption will be place here">
-                                    <div class="overlay">
-                                        <div class="portfolio-item-content">
-                                            <h3>A nice caption will be place here</h3>
-                                        </div>
-                                    </div>
                                     <img src="images/project/glamout-glam/screenshot-127_0_0_1_8000-2024_08_15-13_26_57.png"
                                         class="lazyload" alt="Image" />
                                 </a>
@@ -182,23 +177,12 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 pr-md-5">
-                                <p>Far far away, behind the word mountains, far from the countries Vokalia and
-                                    Consonantia, there live
-                                    the blind texts. Separated they live in Bookmarksgrove right at the coast of the
-                                    Semantics, a large
-                                    language ocean. A small river named Duden flows by their place and supplies it with
-                                    the necessary
-                                    regelialia. It is a paradisematic country, in which roasted parts of sentences fly
-                                    into your mouth.
+                            <div class="col-lg-12 pr-md-5">
+                                <p>An e-commerce platform built using Django and PostgreSQL, designed for seamless
+                                    online shopping experiences. The website features secure payment integration,
+                                    product management, and a responsive user interface, all optimized for performance
+                                    and scalability.
                                 </p>
-                            </div>
-                            <div class="col-md-6 pl-md-5">
-                                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                                    unorthographic
-                                    life One day however a small line of blind text by the name of Lorem Ipsum decided
-                                    to leave for the
-                                    far World of Grammar.</p>
                             </div>
                         </div>
 
